--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   margin: 0;
   padding: 5px 10px 1000px;
 }
+details details {
+  padding-inline: 10px;
+}
 /* Highlight the target element */
 :target {
   outline: 1px solid blue;
